--- a/loveproof-frontend/src/index.css
+++ b/loveproof-frontend/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'aos/dist/aos.css';
+html {
+    scroll-behavior: smooth;
+  }
